fix available moves not showing

--- a/src/Board.module.scss
+++ b/src/Board.module.scss
@@ -52,8 +52,9 @@
       position: absolute;
       inset: 0;
       text-align: center;
+      line-height: 64px;
       font-size: 128px;
-      color: rgba(184, 184, 184, 0.67);
+      color: rgba(128, 128, 128, 0.67);
       z-index: 2;
     }
 
